--- a/CW2/CW2.csproj
+++ b/CW2/CW2.csproj
@@ -207,6 +207,10 @@
     <Compile Include="Migrations\201612121906030_0.Designer.cs">
       <DependentUpon>201612121906030_0.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201612150211239_121.cs" />
+    <Compile Include="Migrations\201612150211239_121.Designer.cs">
+      <DependentUpon>201612150211239_121.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\Anouncement.cs" />
@@ -307,6 +311,9 @@
   <ItemGroup>
     <EmbeddedResource Include="Migrations\201612121906030_0.resx">
       <DependentUpon>201612121906030_0.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201612150211239_121.resx">
+      <DependentUpon>201612150211239_121.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
